# easy-repl

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: basic.rs  errors.rs  from_str.rs  matryoshka.rs  minimal.rs  mut_state.rs  overload.rs  practical.rs  search.rs  shared_mut_state.rs
src/: command.rs  completion.rs  lib.rs  repl.rs  shell.rs
