[package]
name = "just-repl"
version = "0.1.0"
authors = ["Jędrzej Boczar <yendreij@gmail.com>"]
edition = "2018"

[dependencies]
rustyline = "8.0"
rustyline-derive = "0.4"
thiserror = "1.0"
anyhow = "1.0"
textwrap = "0.13"
trie-rs = "0.1"

[dev-dependencies]
radix_trie = "0.2.1"
cedarwood = "0.4.4"
