[package]
name = "easy-repl"
version = "0.2.0"
authors = ["Jędrzej Boczar <jedrzej.boczar@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An easy to use REPL, ideal when there is a need to crate an ad-hoc shell"
repository = "https://github.com/jedrzejboczar/easy-repl"
keywords = [
    "repl",
    "cli",
    "shell",
    "interactive",
    "interpreter",
]
categories = ["command-line-interface"]

[dependencies]
rustyline = "8.0"
rustyline-derive = "0.4"
thiserror = "1.0"
anyhow = "1.0"
textwrap = "0.13"
trie-rs = "0.1"
shell-words = "1.0"
